<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 AlexZHOU
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

  <string name="app_name">Alex 2048</string>
  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>

  <!--Login interface-->
  <string name="welcome">Welcome Alex 2048</string>
  <string name="password">Password</string>
  <string name="account">Account</string>
  <string name="login_in">Login</string>
  <string name="tourist">Tourist</string>
  <string name="sign_in">Sign in</string>
  <string name="enter_password_again">Enter Password Again</string>


  <string name="scoreTitle">Score</string>
  <string name="best_score_title">Best Score</string>
  <string name="back">Back</string>
  <string name="restart">Restart</string>
  <string name="exit">Exit</string>


</resources>