<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 AlexZHOU
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <RelativeLayout
      android:id="@+id/id_titlebar_rl"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      >

    <TextView
        android:id="@+id/id_welcome_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="42sp"
        />

  </RelativeLayout>


  <RelativeLayout
      android:id="@+id/id_input_rl"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/id_account_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/id_password_til"
        >

      <EditText
          android:id="@+id/id_account_ed"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginLeft="20dp"
          android:layout_marginRight="20dp"
          android:hint="@string/account"
          android:inputType="textEmailAddress"
          />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@id/id_password_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >

      <EditText
          android:id="@+id/id_password_ed"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginLeft="20dp"
          android:layout_marginRight="20dp"
          android:hint="@string/password"
          android:inputType="textPassword"
          />

    </android.support.design.widget.TextInputLayout>

  </RelativeLayout>

  <RelativeLayout
      android:id="@+id/id_commit_id"
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      android:layout_weight="1"
      >

    <Button
        android:id="@+id/id_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/login_in"
        />

    <Button
        android:id="@+id/id_tourist_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_login_btn"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/tourist"
        />

    <TextView
        android:id="@+id/id_signin_tv"
        android:layout_marginBottom="44dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#4527a0"
        android:text="@string/sign_in"/>

  </RelativeLayout>

</LinearLayout>